fixed spacing issue on landing page

--- a/css/styles.css
+++ b/css/styles.css
@@ -506,6 +506,6 @@ ul.linktos li {
   
 }
 
-h4.h2.ache2 {
+/*h4.h2.ache2 {
   margin-top: 0;
-}
+}*/
